--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <title>zima</title>
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/grid.css" rel="stylesheet">
 </head>
 <body>
     <h1 class="hidden"> zima</h1> 
     <div class="container">
-        <header id="main-header" class="grid">
-            <nav id="main-nav">
+        <header id="main-header" class="grid-con">
+            <nav id="main-nav" class="col-span-full">
                 <h2 class="hidden">Main Navigation</h2>
                 <input type="checkbox" id="hamburger">
                 <label for="hamburger">
@@ -28,7 +29,7 @@
                 </div>
             </nav>
            
-            <img  id="header-logo" src="IMAGES/LOFO_FINAL_ZIMA.svg" alt="ZIMA logo">
+            <img  class="col-span-full"id="header-logo" src="IMAGES/fip-logo2.svg" alt="ZIMA logo" height="90px" width="100px">
         </header>
-        <div id="hero-image" class="grid">
-            <img src="IMAGES/MOBILW-HERO-IMG.jpg"  alt="hero-image"></div>
+        <div id="hero-image" class="grid-con">
+            <img src="IMAGES/MOBILW-HERO-IMG.jpg"   class="col-start-1 col-end-4" alt="hero-image"></div>
