--- a/contact.html
+++ b/contact.html
@@ -35,24 +35,27 @@
              </div>
          </header>
 
-         <main class="grid-con">
-            <section id="contact-form" class="col-span-full m-col-span-full l-col-span-full">
+         <main >
+            <section id="contact-form">
                 <h3 class="hidden">Contact Us Form</h3>
-                <form action="email.php" method="POST" enctype="text/plain">
-                    <input name="firstName" type="text" placeholder="Firstname" >
-                            <h2>username</h2>
+                <form action="email.php" method="POST" enctype="text/plain" >
+                  <div  id="login" class="col-span-full m-col-span-full l-col-span-full">
+                     <input name="firstName" type="text" placeholder="Firstname" >
+                            <h2>username</h2></div>
                     <input name="lastName" type="text" placeholder="Lastname">
                               <h2>password</h2>
                               <input name="submit" type="submit" value="login">
 
-                    <input name="contactInfo" type="text" required placeholder="Email">
-                    <input name="contactInfo" type="text" required placeholder="Confirm Email">
+                 <div class=""> 
+                      <input class="col-span-full m-col-span-full l-col-span-full jerry" name="contactInfo" type="text" required placeholder="firstName">
+                    <input name="contactInfo" type="text" required placeholder="lastName">
                     <input name="contactInfo" type="text" required placeholder="Phone number">
                     <input name="address" type="text" placeholder="Address">
                     <input name="city" type="text" placeholder="City">
                     <input name="province" type="text" placeholder="Province">
-                    <textarea name="msg" placeholder="Describe a bit...."></textarea>
-                    <input name="submit" type="submit" value="Send">
+                   
+                    <input name="submit" type="submit" value="sign-in">
+                 </div>
                 </form>
             </section>
         </main>
