--- a/contact.html
+++ b/contact.html
@@ -36,19 +36,19 @@
          </header>
 
          <main >
-            <section id="contact-form">
+            <section id="contact-form" class="juni">
                 <h3 class="hidden">Contact Us Form</h3>
                 <form action="email.php" method="POST" enctype="text/plain" >
-                  <div  id="login" class="col-span-full m-col-span-full l-col-span-full">
-                     <input name="firstName" type="text" placeholder="Firstname" >
-                            <h2>username</h2></div>
-                    <input name="lastName" type="text" placeholder="Lastname">
-                              <h2>password</h2>
-                              <input name="submit" type="submit" value="login">
+                  <div class="jerry">
+                     <input id="jun" name="firstName" type="text" placeholder="username">
+                            </div>
+                    <input class="jerry" id="jun" name="lastName" type="text" placeholder="password">
+                              
+                             <div class="jerry"> <input  name="submit" type="submit" value="login"></div>
 
-                 <div class=""> 
-                      <input class="col-span-full m-col-span-full l-col-span-full jerry" name="contactInfo" type="text" required placeholder="firstName">
-                    <input name="contactInfo" type="text" required placeholder="lastName">
+                 <div class="jerry"> 
+                      <input  name="contactInfo" type="text" required placeholder="firstName">
+                    <input  name="contactInfo" type="text" required placeholder="lastName">
                     <input name="contactInfo" type="text" required placeholder="Phone number">
                     <input name="address" type="text" placeholder="Address">
                     <input name="city" type="text" placeholder="City">
