--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <title>zima</title>
 </head>
 <body>
-    <h1 class="hidden">Burple Homepage</h1>
+    <h1 class="hidden">ZIMA</h1>
     <div id="sticky-nav-con">
          <header class="grid-con" id="main-header">
              <nav id="main-nav" class="col-span-full m-col-start-4 m-col-end-11">
@@ -18,20 +18,20 @@
                  <button id="button"></button>
                  <div id="burger-con">
                      <ul id="burger-menu">
-                         <li><a href="index.html">Home</a></li>
-                         <li><a href="team.html">Who are we?</a></li>
-                         <li><a href="products.html">Products</a></li>
-                         <li><a href="Ecofriendly.html">Eco-Friendly</a></li>
-                         <li><a href="contact.html">Contact</a></li>
+                         <li><a href="index.html">HOME</a></li>
+                         <li><a href="new-arrival.html">NEW ARRIVALS</a></li>
+                         <li><a href="#">TEAM</a></li>
+                         <li><a href="#">CONTACT</a></li>
+                         
                      </ul>
                  </div>
              </nav>
              <div id="logo" class="col-span-full m-col-start-1 m-col-end-4">
-                 <a href="index.html"><img src="images/BURPLE_Logo.svg" alt="Burple Logo"></a>
+                 <a href="index.html"><img src="images/fip-logo2.svg" width="100" height="100" alt="ZIMA Logo"></a>
              </div>
              <!--<div id="book-now-header" class="m-col-span-2 book-now">-->
              <div id="sign-in-header" class="m-col-span-2 sign-in">
-                 <p>Sign in/Register</p>
+                 <a href="contact.html" >sign-in/login</a>
              </div>
          </header>
 
@@ -59,3 +59,6 @@
                 </form>
             </section>
         </main>
+    </div>
+    <script src="js/main.js"></script>
+</body>
