--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ alt="">
         <h3>WINE</h3>
     </div>
 </section>
-<section id="team" class="grid-con">
+<!-- <section id="team" class="grid-con">
     
       <h2 class="col-span-full">TEAM</h2>  
     
@@ -155,7 +155,7 @@ alt="">
         <h3>AMBASSADOR</h3>
     </div>
 
-    <div class="col-span-full m-col-start-2 m-col-end-6 l-col-start-5 l-col-end-8">
+    <div class="colm-col-start-2 m-col-end-6 l-col-start-5 l-col-end-8-span-full ">
         <img src="images/CE0.jpg" alt="stars">
         <h3>CEO</h3>
     </div>
@@ -164,7 +164,32 @@ alt="">
         <img src="images/TABLET-VICE-ECECUTIVE.jpg" alt="stars">
         <h3>CEO</h3>
     </div>
+</section> -->
+
+<section id="characters" class="grid-con">
+    <div class="namestaff col-span-full m-col-start-5 m-col-end-10  l-col-start-2 l-col-end-4">
+        <div class="role">embassador </div>
+        <a href="#lightbox">
+        <img data-member="president" src="images/DESKTOP-EMBASSDOR.jpg" class="character" alt="member1">
+        </a>
+    </div>
+
+    <div class="namestaff col-span-full m-col-start-2 m-col-end-6 l-col-start-5 l-col-end-8 ">
+        <div class="role ">CEO</div>
+        <a href="#lightbox">
+        <img data-member="director" src="images/CE0.jpg" class="character" alt="member2">
+        </a>
+    </div>
+
+    <div class="namestaff col-span-full m-col-start-8 m-col-end-13 l-col-start-9 l-col-end-12">
+        <div class="role">vice-executive </div>
+        <a href="#lightbox">
+        <img data-member="developer" src="images/DESKTOP=VICE-EXECUTIVE.jpg" class="character" alt="member3">
+        </a>
+    </div>
 </section>
+
+
         </main>
 
 <footer id="footer" class="grid-con">
@@ -183,6 +208,15 @@ alt="">
     </nav>
 
 </footer>
+
+<section class="lightbox" id="lightbox">
+    <a href="" class="lightbox_close">x</a>
+        <article>
+            <h3 class="lb_heading">Captain America - The First Avenger</h3>
+            <p class="bio">Matt</p>
+            <p class="name">Lorem ipsum</p>
+        </article>
+    </section>
 <script src="js/main.js"></script>
 
 </body>
