--- a/new-arrival.html
+++ b/new-arrival.html
@@ -20,8 +20,8 @@
                      <ul id="burger-menu">
                          <li><a href="index.html">HOME</a></li>
                          <li><a href="new-arrival.html">NEW ARRIVALS</a></li>
-                         <li><a href="#">TEAM</a></li>
-                         <li><a href="#">CONTACT</a></li>
+                         <li><a href="default.html">TEAM</a></li>
+                         <li><a href="default.html">CONTACT</a></li>
                          
                      </ul>
                  </div>
@@ -53,7 +53,7 @@ images/BLACK-FINAL-80_avmno3_c_scale,w_768.jpg 768w,
 images/BLACK-FINAL-80_avmno3_c_scale,w_942.jpg 942w,
 images/BLACK-FINAL-80_avmno3_c_scale,w_971.jpg 971w"
 src="images/BLACK-FINAL-80_avmno3_c_scale,w_971.jpg"
-alt="">
+alt=" golden drink">
 
 
 
@@ -81,13 +81,13 @@ alt="">
     images/GOLD-FINAL-80_hce2fe_c_scale,w_932.jpg 932w,
     images/GOLD-FINAL-80_hce2fe_c_scale,w_971.jpg 971w"
     src="images/GOLD-FINAL-80_hce2fe_c_scale,w_971.jpg"
-    alt="">
+    alt=" ultra golden">
 
 
 
 
 <div id="banner" class="col-start-1  col-end-5  m-col-start-1 m-col-end-12 l-col-start-2 l-col-end-12" >
-<h4>RED-EYE</h4>
+<h4>GOLDEN ULTRA</h4>
 
 <div id="buy-now"  >
 <a href="default.html">BUY NOW</a>
@@ -112,7 +112,7 @@ alt="">
 
 
 <div id="banner" class="  col-start-1  col-end-5   m-col-start-1 m-col-end-12  l-col-start-2 l-col-end-12" >
-<h4>GOLDEN ULTRA</h4>
+<h4>RED EYE</h4>
 
 <div id="buy-now"  >
 <a href="default.html">BUY NOW</a>
@@ -122,7 +122,7 @@ alt="">
          </main>
 
 <footer id="footer" class="grid-con">
-    <img src="images/fip-logo2.svg" alt="logo"  height="180px" width="180px" class="col-span-full">
+    <img src="images/fip-logo2.svg" alt="logo"  height="180" width="180" class="col-span-full">
     <p class="col-span-full">Zima was produced using a unique brewing process that removed the color and flavor from the beer, resulting in a clear, almost water-like beverage. The taste was sweet and citrusy, with a slight hint of malt</p>
 
     <nav id="footer-nav" class="col-span-full ">
