--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ images/zima4_t3sh72_c_scale,w_1200.jpg 1200w"
 src="images/HERO-IMAGE_hgyrxj_c_scale,w_1200.jpg"
 alt="zima image">
 <div  class="banner col-start-1  col-end-5 m-col-span-full " >
-    <h3>NON-ALCHOLIC BEVRAGES</h3>
+    <h3>NON-ALCOHOLIC BEVRAGES</h3>
     
     <div id="buy-nows"  >
         <a href="new-arrival.html" class="buy">BUY NOW</a>
@@ -75,7 +75,7 @@ alt="zima image">
    </section>
 
    <section id="collection" class="grid-con">
-    <h2 class="hidden">ALCOHAL</h2>
+    <h2 class="hidden">ALCOHOL</h2>
 
     <div class="col-span-full m-col-start-2 m-col-end-6  l-col-start-1 l-col-end-4">
         
