--- a/new-arrival.html
+++ b/new-arrival.html
@@ -42,7 +42,7 @@
          
          <main id="yo" class="grid-con">
             <h2 class="col-span-full  m-col-span-full l-span-full">NEW-ARRIVAL</h2>
-            <H3 class="col-span-full  m-col-span-full">NON-ALOCHOLIC BEER</H3>
+            <H3 class="col-span-full  m-col-span-full">NON-ALCOHOLIC BEER</H3>
             
 
 
